Fixed popups in the result-value directive, and several other fixes.
- Fixed several scrollbar styling issues.
- Removed some unnecessary scope variables and watches.
- Removed the need for adding a watch (which didn't work) on results.rows in main.js in order to set up the popups.

--- a/static/css/animations.css
+++ b/static/css/animations.css
@@ -49,3 +49,11 @@
 	-webkit-transition-property: top;
 	transition-property: top;
 }
+
+
+table tbody tr td.clickable {
+	-webkit-transition: 0.4s linear;
+	transition: 0.3s linear;
+	-webkit-transition-property: background, box-shadow;
+	transition-property: background, box-shadow;
+}
